# SISMO-V2

./: .planning && cp CUsersAndresSanJuanroddos-workspaceSISMO.planningSISMO_V2_System_Prompts.md CUsersAndresSanJuanroddos-workspaceSISMO-V2.planning  ARGOS_INTEGRATION_AUDIT.md  CLAUDE.md  SISMO_V2_Documento_Maestro.md  render.yaml  skills-lock.json
backend/: .env.example  audit_report.html  main.py  pyproject.toml  requirements.txt
backend/agents/: chat.py  prompts.py
backend/core/: alegra_sync.py  auth.py  contabilidad_handlers.py  crm_handlers.py  crm_model.py  database.py  datakeeper_handlers_comprobante.py  datakeeper_handlers_confirmacion.py  datakeeper_handlers_crm.py  datakeeper_handlers_loanbook.py  datetime_utils.py  event_handlers.py  event_processor.py  events.py  loanbook_handlers.py  loanbook_model.py  permissions.py  router.py  sliding_session.py  tipos_identificacion.py
backend/models/: loanbook_schema.py
backend/routers/: alegra.py  auth.py  backlog.py  cartera_legacy.py  chat.py  cierre.py  cierre_q1.py  cierres.py  cobranza.py  conciliacion.py  crm.py  dashboard.py  datakeeper.py  informes.py  integraciones.py  inventario.py  it_sismo.py  loanbook.py  loanbook_admin.py  plan_separe.py  radar.py  tributario.py  webhooks.py
backend/scripts/: actualizar_saldos_desde_excel_oficial.py  agregar_capital_plan.py  cleanup_backlog_basura.py  crear_contactos_legacy_alegra.py  create_loanbooks_fe467_fe468.py  fix_fechas_entrega.py  fix_loanbooks_excel_v1_format.py  fix_ps_2026_007.py  fix_richard_lb0017.py  fix_yordanis_lb0014.py  generar_api_key.py  (+19 more)
(+255 files in other folders)
