[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sismo-v2-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.7.1",
    "motor==3.7.0",
    "pymongo==4.9.2",
    "anthropic>=0.38.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "python-dateutil==2.9.0",
    "pdfplumber==0.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "httpx==0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
